--- a/citation.html
+++ b/citation.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Quelques citations inspirantes pour motiver et encourager.">
-    <meta name="author" content="Ahounou Yannick b">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="author" content="Ahounou Yannick ">
     <link rel="stylesheet" href="font/css/all.min.css">
     
     <link rel="stylesheet" href="citation.css">
@@ -41,6 +40,6 @@
             <span class="auteur">– Sénèque</span>
         </div>
     </div>
-    <i class="fa-solid fa-star"></i>
+    
 </body>
 </html>
